--- a/blog/_posts/2012-08-30-es-france.md
+++ b/blog/_posts/2012-08-30-es-france.md
@@ -9,6 +9,5 @@ author: dpilato
 
 La communaute Elasticsearch France a d&eacute;sormais son site collaboratif.
 
-Welcome !
-
+Vous pouvez proposer vos articles en francais via des "pull requests" sur GitHub.
 
