Add image for posts

--- a/blog/_posts/2012-08-30-es-france.md
+++ b/blog/_posts/2012-08-30-es-france.md
@@ -7,7 +7,7 @@ author: dpilato
 
 ---
 
-La communaute Elasticsearch France a d&eacute;sormais son site collaboratif.
+La communauté Elasticsearch France a désormais son site collaboratif.
 
 Vous pouvez proposer vos articles en francais via des "pull requests" sur GitHub.
 
