--- a/blog/_posts/2012-08-30-es-france.md
+++ b/blog/_posts/2012-08-30-es-france.md
@@ -2,7 +2,9 @@
 layout: post
 image: /blog/img/naissance.png
 title: Elasticsearch France
-tags: elasticsearch france
+tags: 
+- elasticsearch
+- france
 author: dpilato
 
 ---
