Update welcome page

--- a/blog/_posts/2012-08-30-es-france.md
+++ b/blog/_posts/2012-08-30-es-france.md
@@ -9,7 +9,23 @@ author: dpilato
 
 ---
 
-La communauté Elasticsearch France a désormais son site collaboratif.
+[Tanguy](/authors.html#tlrx) et [moi](/authors.html#dpilato) sommes heureux de vous annoncer l'ouverture officielle du site francophone dédié au projet [Elasticsearch](http://www.elasticsearch.org/).
 
-Vous pouvez proposer vos articles en francais via des "pull requests" sur GitHub.
+L'objectif de ce site est de partager la connaissance entre les différents développeurs ou utilisateurs d'Elasticsearch en français et
+d'accompagner l'adhésion autour de ce projet en France.
 
+Avec cette organisation et ce site, nous souhaitons également pouvoir proposer un certain nombre d'[évènements et de rencontres](/agenda.html) que ce soit
+à l'occasion de JUG ou d'autres conférences.
+
+Ce site ne peut vivre et s'enrichir que par des contributions individuelles. Nous avons besoin de vous !
+
+Quelque soit votre niveau, vous pouvez contribuer. Par exemple, si vous avez obtenu une réponse à votre question dans un forum
+que ce soit le [forum officiel](https://groups.google.com/group/elasticsearch) ou le [forum français](/ml.html), n'hésitez pas à 
+venir [poster un article ici](/joinus.html) pour résumer votre cas d'utilisation, la question posée et les réponses apportées.
+
+Chaque contribution est **importante**. Chaque contribution est **essentielle**. Ce site est **VOTRE site**.
+
+<blockquote>
+"<strong>This should be easier</strong>", we declared, "<strong>and cool, bonsai cool</strong>".
+<small>Shay Banon, <a href="http://www.elasticsearch.org/">Elasticsearch.org</a></small>
+</blockquote>
