Fix some typos and mistakes

--- a/blog/_posts/2012-10-18-jug-lyon.md
+++ b/blog/_posts/2012-10-18-jug-lyon.md
@@ -4,7 +4,7 @@ image: /blog/img/lyon-jug.png
 title: ElasticSearch au Lyon JUG
 tags:
 - elasticsearch
-- france
+- jug
 author: filirom1
 
 ---
@@ -19,12 +19,12 @@ ainsi que la démo : <http://demo.pilato.fr/>
 
 ## Quelques commentaires personnels sur la session
 
-[Tanguy Leroux](/authors.html#tlrx) formateur Zenika et [David Pilota](/authors.html#dpilato) animateur de la communauté française ElasticSearch ont fait une super présentation d'ElasticSearch devant une salle quasi pleine.
+[Tanguy Leroux](/authors.html#tlrx), formateur Zenika et [David Pilato](/authors.html#dpilato), animateur de la communauté française ElasticSearch ont fait une super présentation d'ElasticSearch devant une salle quasi pleine.
 
-J'ai bien aimé la présentation des API de recherches qui expliquait bien les nuances entre must <-> should, term <-> match.
+J'ai bien aimé la présentation des API de recherche qui expliquait bien les nuances entre must <-> should, term <-> match.
 Ainsi que le fonctionnement des rivières pour synchroniser ElasticSearch avec un autre système de données (rabbitmq, activemq, mongodb, couchdb, jdbc, wikipedia, twitter, fs, ...)
 
-La présentation des différents type de facette (term, date, range, geoloc) était intéressante et donne plein d'idées de réalisations possibles.
+La présentation des différents types de facette (term, date, range, geoloc) était intéressante et donne plein d'idées de réalisations possibles.
 
 
 ## Les questions posées
@@ -35,13 +35,13 @@ Après la présentation, un certain nombre de questions ont été posé :
 __Comment modifier la configuration Lucene ?__
 
 Pour utiliser ES, on n'est pas obligé de connaitre Lucene.
-Mais Shay Banon le créateur d'ES est un gros technicien et a laissé la possibilité de le faire à différents niveaux :
+Mais Shay Banon le créateur d'ES est un pur technicien et a laissé la possibilité de le faire à différents niveaux :
  * On peut configurer les Analysers Lucene avec les API REST : <http://www.elasticsearch.org/guide/reference/index-modules/analysis/>
  * Sinon on peut le faire avec le système de plugin : <http://www.elasticsearch.org/guide/reference/modules/plugins.html>
 
 __Comment sécuriser un index ElasticSearch ?__
 
-Dans ElasticSearch il n'y a pas de notion d'utilisateur, cependant il y a les notions d'index et de type qui sont gérées au niveau de l'URL : /index/type/_action. On peut donc mettre l'ensemble des données d'un utilisateur dans un index et restreindre l'accès à cet index dans son application, ou via un reverse proxy apache.
+Dans ElasticSearch il n'y a pas de notion d'utilisateur. Cependant, il y a les notions d'index et de type qui sont gérées au niveau de l'URL : /index/type/_action. On peut donc mettre l'ensemble des données d'un utilisateur dans un index et restreindre l'accès à cet index dans son application, ou via un reverse proxy apache.
 Il existe également un plugin de sécurité mais celui-ci est très basique et est à utiliser avec prudence : <https://github.com/sonian/elasticsearch-jetty>
 
 
@@ -52,18 +52,19 @@ Il est préférable de figer l'allocation des shards sur les noeuds, pour évite
 __Comment récupérer l'intégralité des données d'ElasticSearch  ?__
 
 On ne peut pas demander à ElasticSearch l'ensemble des données en une seule requête (la réponse serait énorme). Il est donc préférable de le faire en paginant les résultats.
-mis quand ElasticSearch index des données en continu, il ne faut pas gérer la pagination à la main, il existe une API qui permet de récupérer l'intégralité des résultats sans doublon ni données manquantes : <http://www.elasticsearch.org/guide/reference/api/search/scroll.html>
+Mais comme ElasticSearch indexe des données en continu, il ne faut pas gérer la pagination à la main. 
+Il existe une API qui permet de récupérer l'intégralité des résultats sans doublon ni données manquantes : <http://www.elasticsearch.org/guide/reference/api/search/scroll.html>
 
 __Quand ne pas utiliser ElasticSearch ?__
 
-ElasticSearch permet de faire de l'indexation quasi temps réel (ES met à jours ses index toutes les secondes), il faut attendre au pire cas une seconde avant que la donnée indexée soit requêtable. Si cette contrainte est trop forte pour vous n'utilisez pas ElasticSearch ou regardez si l’API refresh peut vous permettre de contourner la difficulté.
+ElasticSearch permet de faire de l'indexation quasi temps réel (ES met à jours ses index toutes les secondes), il faut attendre au pire cas une seconde avant que la donnée indexée soit requêtable. Si cette contrainte est trop forte pour vous n'utilisez pas ElasticSearch ou regardez si l’API Refresh peut vous permettre de contourner la difficulté : <http://www.elasticsearch.org/guide/reference/api/admin-indices-refresh.html>
 
 
 __Est-ce qu'ElasticSearch peut être utilisé pour stocker de la donnée (comme une base NoSQL) ?__
 
 Il y a 1 an et demi, Shay Banon a répondu à cette question en disant que pour le moment, si la donnée est déjà présente dans une base, il est préférable de la garder comme backup, au cas où.
 Depuis des personnes commencent à le faire sur des services en production : <https://groups.google.com/forum/?fromgroups=#!searchin/elasticsearch/stable$20store/elasticsearch/qAnXu5w3pn4/jQE4FVUn8CAJ>.
-ElasticSearch n'a pas vocation à devenir une base de donnée. Il ne supporte pas les transactions et ne les supportera surement jamais.
+A noter, qu'à ce stade, Elasticsearch ne supporte pas les transactions.
 
 
 __Comment se passe les MAJ d'un Cluster ?__
@@ -85,4 +86,4 @@ Un cluster de 25 serveurs gérant plusieurs Tera de données : <http://www.sonia
 __Les volumétries sur lesquels David et Tanguy ont travaillé__
 
 Pour Tanguy c'était un cluter de 4 machines pour gérer ~20 millions de documents pour un total de ~18Go de données.
-Pour David, c'est pour le moment un cluster de 2 machines avec 500 000 docuemnts avec des temps de réponse de ~20ms, mais le cluster est train de grossir pour doubler sa capacité.
+Pour David, c'est pour le moment un cluster de 2 machines avec 500 000 docuemnts avec des temps de réponse de ~20ms. Un nouveau projet se construit avec la gestion de 100 millions de documents sur 3 machines.
